Fix in alignment with topic boxes.

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -72,7 +72,6 @@ a.missing_page
   margin-left: 1em
   font-size: 12px
   position: relative
-  bottom: -10px
   color: $controls-color
 
 a.important
