--- a/app/stylesheets/themes/plain/_topics.sass
+++ b/app/stylesheets/themes/plain/_topics.sass
@@ -1,11 +1,10 @@
 @mixin topic-container
   .topic
-    padding: 2px 8px
+    padding: 4px 8px
     background: #f7f7f7
     overflow: hidden
     margin-left: 3px
     margin-bottom: 5px
-    line-height: 20px
     font-weight: bold
     font-size: .785em
 
@@ -23,7 +22,6 @@
 
 .topic-list
   overflow: hidden
-  line-height: 0px
 
   ul
     list-style-type: none
@@ -43,7 +41,7 @@ ul.topic-list
   .topic
     max-width: 67%
     text-overflow: ellipsis
-    
+
     .remove
       margin-left: 3px
 
@@ -56,3 +54,4 @@ ul.topic-list
 
 #sidebar ul.topic-list .topic
   float: left
+  padding: 2px 8px
